--- a/views/computers.html
+++ b/views/computers.html
@@ -17,11 +17,11 @@ $(document).ready(function () {
 	
 	$.ajax({
 		type: "GET",
-		url: "http://localhost:8080/getOu/domain",
+		url: "getOu/domain",
 		dataType: "json",
 		success: function (result, status, xhr) {
 			if (result["computers"] == "null") {
-				window.location.replace("http://localhost:8080");
+				window.location.replace("/");
 			}
 			
 			
@@ -57,11 +57,11 @@ $(document).ready(function () {
 		
 		$.ajax({
 			type: "GET",
-			url: "http://localhost:8080/report/computers/" + $("#reportSelect").val() + "/" + $("#daysSelect").val() + "/" + $("#ouSelect").val(),
+			url: "report/computers/" + $("#reportSelect").val() + "/" + $("#daysSelect").val() + "/" + $("#ouSelect").val(),
 			dataType: "json",
 			success: function (result, status, xhr) {
 				if (result["computers"] == "null") {
-					window.location.replace("http://localhost:8080");
+					window.location.replace("/");
 				} 
 					
 				
@@ -193,29 +193,29 @@ $(document).ready(function () {
       </a>
     </div>
     <div class="govuk-header__content">
-      <a href="http://localhost:8080" class="govuk-header__link govuk-header__link--service-name">
+      <a href="/" class="govuk-header__link govuk-header__link--service-name">
         Active Directory Reporting Tool
       </a>
       <button type="button" class="govuk-header__menu-button govuk-js-header-toggle" aria-controls="navigation" aria-label="Show or hide navigation menu">Menu</button>
       <nav>
         <ul id="navigation" class="govuk-header__navigation " aria-label="Navigation menu">
           <li class="govuk-header__navigation-item">
-            <a class="govuk-header__link" href="http://localhost:8080/groups">
+            <a class="govuk-header__link" href="groups">
               Group Reports
             </a>
           </li>
           <li class="govuk-header__navigation-item">
-            <a class="govuk-header__link" href="http://localhost:8080/reports">
+            <a class="govuk-header__link" href="reports">
               User Reports
             </a>
           </li>
           <li class="govuk-header__navigation-item govuk-header__navigation-item--active">
-            <a class="govuk-header__link" href="http://localhost:8080/computers">
+            <a class="govuk-header__link" href="computers">
               Computer Reports
             </a>
           </li>
 		  <li class="govuk-header__navigation-item">
-            <a class="govuk-header__link" href="http://localhost:8080/gpo">
+            <a class="govuk-header__link" href="gpo">
               Group Policy Reports
             </a>
           </li>
@@ -229,7 +229,7 @@ $(document).ready(function () {
 <div class="govuk-breadcrumbs">
   <ol class="govuk-breadcrumbs__list">
     <li class="govuk-breadcrumbs__list-item">
-      <a class="govuk-breadcrumbs__link" href="http://localhost:8080">Home</a>
+      <a class="govuk-breadcrumbs__link" href="/">Home</a>
     </li>
     <li class="govuk-breadcrumbs__list-item">
       <a class="govuk-breadcrumbs__link" href="#">Computer Reports</a>
