--- a/views/groups.html
+++ b/views/groups.html
@@ -19,11 +19,11 @@ $(document).ready(function () {
         if (validate.length == 0) {
             $.ajax({
                 type: "GET",
-                url: "http://localhost:8080/discovergroups/" + $("#groupSelect").val(),
+                url: "discovergroups/" + $("#groupSelect").val(),
                 dataType: "json",
                 success: function (result, status, xhr) {
 					if (result["groups"] == "null") {
-						window.location.replace("http://localhost:8080");
+						window.location.replace("/");
 					} 
 					
 					var t = '<table class="govuk-table">';
@@ -90,7 +90,7 @@ $(document).ready(function () {
 			if (validate.length == 0) {
 				$.ajax({
 					type: "GET",
-					url: "http://localhost:8080/groups/" + groupArray,
+					url: "groups/" + groupArray,
 					dataType: "json",
 					success: function (result, status, xhr) {
 					
@@ -210,29 +210,29 @@ $(document).ready(function () {
       </a>
     </div>
     <div class="govuk-header__content">
-      <a href="http://localhost:8080" class="govuk-header__link govuk-header__link--service-name">
+      <a href="/" class="govuk-header__link govuk-header__link--service-name">
         Active Directory Reporting Tool
       </a>
       <button type="button" class="govuk-header__menu-button govuk-js-header-toggle" aria-controls="navigation" aria-label="Show or hide navigation menu">Menu</button>
       <nav>
         <ul id="navigation" class="govuk-header__navigation " aria-label="Navigation menu">
           <li class="govuk-header__navigation-item govuk-header__navigation-item--active">
-            <a class="govuk-header__link" href="http://localhost:8080/groups">
+            <a class="govuk-header__link" href="groups">
               Group Reports
             </a>
           </li>
           <li class="govuk-header__navigation-item">
-            <a class="govuk-header__link" href="http://localhost:8080/reports">
+            <a class="govuk-header__link" href="reports">
               User Reports
             </a>
           </li>
           <li class="govuk-header__navigation-item">
-            <a class="govuk-header__link" href="http://localhost:8080/computers">
+            <a class="govuk-header__link" href="computers">
               Computer Reports
             </a>
           </li>
 		  <li class="govuk-header__navigation-item">
-            <a class="govuk-header__link" href="http://localhost:8080/gpo">
+            <a class="govuk-header__link" href="gpo">
               Group Policy Reports
             </a>
           </li>
@@ -246,7 +246,7 @@ $(document).ready(function () {
 <div class="govuk-breadcrumbs">
   <ol class="govuk-breadcrumbs__list">
     <li class="govuk-breadcrumbs__list-item">
-      <a class="govuk-breadcrumbs__link" href="http://localhost:8080">Home</a>
+      <a class="govuk-breadcrumbs__link" href="/">Home</a>
     </li>
     <li class="govuk-breadcrumbs__list-item">
       <a class="govuk-breadcrumbs__link" href="#">Group Reports</a>
