--- a/views/index.html
+++ b/views/index.html
@@ -18,7 +18,7 @@ $(document).ready(function () {
         if (validate.length == 0) {
             $.ajax({
                 type: "GET",
-                url: "http://localhost:8080/login/" + $("#username").val() + "/" + $("#password").val() + "/" + $("#hostname").val(),
+                url: "login/" + $("#username").val() + "/" + $("#password").val() + "/" + $("#hostname").val(),
                 dataType: "json",
                 success: function (result, status, xhr) {
                     $("#domainSelectButton").show();
@@ -65,21 +65,21 @@ $(document).ready(function () {
 	
 	$("#domainSelectButton").click(function (e) {
         console.log("domain selected");
-		window.location.replace("http://localhost:8080/groups");  
+		window.location.replace("groups");  
     });
 	
 	$("#reportSelectButton").click(function (e) {
         console.log("reports selected");
-		window.location.replace("http://localhost:8080/reports");  
+		window.location.replace("reports");  
     });
 	
 	$("#computerReportSelectButton").click(function (e) {
         console.log("reports selected");
-		window.location.replace("http://localhost:8080/computers");  
+		window.location.replace("computers");  
     });
 	$("#gpoReportSelectButton").click(function (e) {
         console.log("gpo selected");
-		window.location.replace("http://localhost:8080/gpo");  
+		window.location.replace("gpo");  
     });
 	
     $(document).ajaxStart(function () {
@@ -117,29 +117,29 @@ $(document).ready(function () {
       </a>
     </div>
     <div class="govuk-header__content">
-      <a href="http://localhost:8080" class="govuk-header__link govuk-header__link--service-name">
+      <a href="/" class="govuk-header__link govuk-header__link--service-name">
         Active Directory Reporting Tool
       </a>
       <button type="button" class="govuk-header__menu-button govuk-js-header-toggle" aria-controls="navigation" aria-label="Show or hide navigation menu">Menu</button>
       <nav>
         <ul id="navigation" class="govuk-header__navigation " aria-label="Navigation menu">
           <li class="govuk-header__navigation-item">
-            <a class="govuk-header__link" href="http://localhost:8080/groups">
+            <a class="govuk-header__link" href="groups">
               Group Reports
             </a>
           </li>
           <li class="govuk-header__navigation-item">
-            <a class="govuk-header__link" href="http://localhost:8080/reports">
+            <a class="govuk-header__link" href="reports">
               User Reports
             </a>
           </li>
           <li class="govuk-header__navigation-item">
-            <a class="govuk-header__link" href="http://localhost:8080/computers">
+            <a class="govuk-header__link" href="computers">
               Computer Reports
             </a>
           </li>
 		  <li class="govuk-header__navigation-item">
-            <a class="govuk-header__link" href="http://localhost:8080/gpo">
+            <a class="govuk-header__link" href="gpo">
               Group Policy Reports
             </a>
           </li>
@@ -153,7 +153,7 @@ $(document).ready(function () {
 <div class="govuk-breadcrumbs">
   <ol class="govuk-breadcrumbs__list">
     <li class="govuk-breadcrumbs__list-item">
-      <a class="govuk-breadcrumbs__link" href="http://localhost:8080">Home</a>
+      <a class="govuk-breadcrumbs__link" href="/">Home</a>
     </li>
     
   </ol>
