fixed logon hours report

--- a/views/reports.html
+++ b/views/reports.html
@@ -220,7 +220,7 @@ $(document).ready(function () {
 	<option value="Account never expires users">Account never expires users</option>
 	<option value="Recently logged on users">Recently logged on users</option>
 	<option value="Dial in allowed users">Dial in allowed users</option>
-	<option value="Logon hours based report">Logon hours based report</option>
+	<!-- <option value="Logon hours based report">Logon hours based report</option> -->
   </select>
 </div>
 
